tests/ui/lang-items/fn-fn_mut-call-ill-formed.fn_once_bad_sig.stderr
error[E0308]: mismatched types
  --> $DIR/fn-fn_mut-call-ill-formed.rs:47:5
   |
LL |     b();
   |     ^^^ expected `i32`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
